# Cpp_15Puzzle

./: .gitignore  Board.cpp  Board.h  CMakeLists.txt  Puzzle.cpp  Puzzle.h  README.md  Screen.cpp  Screen.h  main.cpp
test/: board_test.cc  test.cpp
